--- a/helmless-chart/values.prd.yaml
+++ b/helmless-chart/values.prd.yaml
@@ -1,6 +1,10 @@
 service:
   name: my-service-prd
+  image:
+    tag: "latest"
   env:
     SERVICE_VAR: "Wohoo, going to production!"
 job:
   name: my-job-prd
+  image:
+    tag: "latest"
