--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,4 +26,5 @@ jobs:
           IMAGE_TAG="latest" # this is for demo purposes, in a real scenario this should be the digest of the built image
           # IMAGE_TAG=$(echo ${{ steps.build.outputs.digest }} | cut -d: -f2)
           yq e -i '.service.image.tag = strenv(IMAGE_TAG)' helmless-chart/values.yaml
+          yq e -i '.service.image.tag = strenv(IMAGE_TAG)' helmless-chart/values.yaml
           yq e -i '.job.image.tag = strenv(IMAGE_TAG)' helmless-chart/values.yaml
