--- a/.github/workflows/deploy-service.yaml
+++ b/.github/workflows/deploy-service.yaml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths:
-      - 'helmless-chart/**'
+    # paths:
+    #   - 'helmless-chart/**'
 
 jobs:
   development:
